--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,10 @@ author:
   name:           Chris Wiggins
 #  url:            https://twitter.com/mdo
   email:          chrisonline1991@gmail.com
+pages_list:
+  About: '/about'
+  Archive: '/archive'
+  Feed: '/atom.xml'
 
 # Custom vars
 version:          1.0.0
